--- a/PetWorld/src/main/resources/templates/appointments-management.html
+++ b/PetWorld/src/main/resources/templates/appointments-management.html
@@ -6,6 +6,7 @@
     <title>Bills Management - Pet Care Service</title>
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/appointments-management.css">
+    <link rel="stylesheet" href="/css/notification.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -140,6 +141,12 @@
     <main class="content">
         <div class="content-header">
             <h1>Bills Management</h1>
+            <div class="notification-container">
+                <div class="notification-bell" id="notificationBell">
+                    <i class="fas fa-bell"></i>
+                    <span class="notification-count" id="notificationCount">0</span>
+                </div>
+            </div>
             <div class="header-actions">
                 <div class="search-box">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
@@ -192,22 +199,15 @@
         </div>
     </main>
 </div>
-<!-- Add notification container -->
-<div class="notification-container">
-    <div class="notification-bell" id="notificationBell">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
-            <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
-        </svg>
-        <span class="notification-count" id="notificationCount"></span>
+<div class="notifications-dropdown" id="notificationsDropdown">
+    <div class="notification-header">
+        <span>Notifications</span>
+        <button class="mark-all-read" id="markAllRead">Mark all as read</button>
     </div>
-    <div class="notifications-dropdown" id="notificationsDropdown">
-        <div class="notification-header">
-            <span>Notifications</span>
-            <button class="mark-all-read" id="markAllRead">Mark all as read</button>
-        </div>
-        <div id="notificationsList">
-            <!-- Notifications will be inserted here -->
+    <div id="notificationsList">
+        <!-- Notifications will be inserted here -->
+        <div class="no-notifications">
+            No notifications
         </div>
     </div>
 </div>
