--- a/PetWorld/src/main/resources/templates/pets-management.html
+++ b/PetWorld/src/main/resources/templates/pets-management.html
@@ -6,6 +6,7 @@
     <title>Pet Management - Pet World</title>
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/pets-management.css">
+    <link rel="stylesheet" href="/css/notification.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -141,6 +142,12 @@
         <div class="pet-management">
             <div class="page-header">
                 <h1>Pet Management</h1>
+                <div class="notification-container">
+                    <div class="notification-bell" id="notificationBell">
+                        <i class="fas fa-bell"></i>
+                        <span class="notification-count" id="notificationCount">0</span>
+                    </div>
+                </div>
                 <button class="add-pet-btn" id="add-pet-btn">
                     <span class="material-symbols-outlined">add</span>
                     Add New Pet
@@ -188,9 +195,6 @@
                             </div>
                             <div class="filter-buttons">
                                 <button class="filter-btn active">All</button>
-                                <button class="filter-btn">Dogs</button>
-                                <button class="filter-btn">Cats</button>
-                                <button class="filter-btn">Others</button>
                             </div>
                         </div>
                     </div>
@@ -274,22 +278,15 @@
         </div>
     </main>
 </div>
-<!-- Add notification container -->
-<div class="notification-container">
-    <div class="notification-bell" id="notificationBell">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
-            <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
-        </svg>
-        <span class="notification-count" id="notificationCount"></span>
+<div class="notifications-dropdown" id="notificationsDropdown">
+    <div class="notification-header">
+        <span>Notifications</span>
+        <button class="mark-all-read" id="markAllRead">Mark all as read</button>
     </div>
-    <div class="notifications-dropdown" id="notificationsDropdown">
-        <div class="notification-header">
-            <span>Notifications</span>
-            <button class="mark-all-read" id="markAllRead">Mark all as read</button>
-        </div>
-        <div id="notificationsList">
-            <!-- Notifications will be inserted here -->
+    <div id="notificationsList">
+        <!-- Notifications will be inserted here -->
+        <div class="no-notifications">
+            No notifications
         </div>
     </div>
 </div>
