--- a/PetWorld/src/main/resources/templates/pet-care-services-profile.html
+++ b/PetWorld/src/main/resources/templates/pet-care-services-profile.html
@@ -241,16 +241,20 @@
                     <span class="material-symbols-outlined">analytics</span>
                     <p id="detailsServiceUsedCount"></p>
                 </div>
+                <div class="service-duration">
+                    <span class="material-symbols-outlined">schedule</span>
+                    <p id="detailsServiceDurationTime"></p>
+                </div>
             </div>
         </div>
         <div class="modal-footer">
-            <button id="editServiceBtn" class="edit-btn">
-                <span class="material-symbols-outlined">edit</span>
-                Edit Service
-            </button>
             <button id="deleteServiceBtn" class="delete-btn">
                 <span class="material-symbols-outlined">delete</span>
                 Delete Service
+            </button>
+            <button id="editServiceBtn" class="edit-btn">
+                <span class="material-symbols-outlined">edit</span>
+                Edit Service
             </button>
         </div>
     </div>
