--- a/PetWorld/src/main/resources/templates/add-service.html
+++ b/PetWorld/src/main/resources/templates/add-service.html
@@ -26,9 +26,14 @@
             <input type="text" id="serviceDiscount" name="discount" required>
         </div>
 
+        <div class="form-group">
+            <label for="serviceDurationTime">Duration Time</label>
+            <input type="text" id="serviceDurationTime" name="durationTime" required>
+        </div>
+
         <div class="form-actions">
-            <button type="submit" class="submit-btn" id="submitAddService">Add Service</button>
             <button type="button" class="cancel-btn" id="cancelAddService">Cancel</button>
+            <button type="submit" class="submit-btn" id="submitAddService">Add Service</button>
         </div>
     </form>
 </div>
