feat: create calendar request and admin dashboard page

--- a/PetWorld/src/main/resources/templates/log-in.html
+++ b/PetWorld/src/main/resources/templates/log-in.html
@@ -36,6 +36,7 @@
                 <option value="PET_OWNER">Pet Owner</option>
                 <option value="PET_CENTER">Pet Adoption Center</option>
                 <option value="PET_CARE_SERVICES">Pet Care Service Provider</option>
+                <option value="ADMIN">Admin</option>
             </select>
         </div>
 
