feat: pagination all pets

--- a/PetWorld/src/main/resources/templates/my-pets.html
+++ b/PetWorld/src/main/resources/templates/my-pets.html
@@ -252,6 +252,7 @@
                 </div>
             </div>
         </div>
+        <div class="pagination-container" id="paginationContainer"></div>
     </main>
 </div>
 
